# pipemeeter

./: Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/: .copilot-instructions.md  instructions.md
.github/workflows/: build-binary.yml  release.yml
packaging/: pipemeeter.desktop
packaging/aur/: .SRCINFO  PKGBUILD
scripts/: run-wsl-desktop-ui.sh
src/: audio.rs  lib.rs  main.rs  preview.rs  ui.rs
src/ui/: helpers.rs  icon.rs  mod.rs
src/ui/components/: cards.rs  create_fx_bus_modal.rs  create_strip_modal.rs  mod.rs  rows.rs
